crates/compiler/tests/parse_errors/record_type_problem.elm
module Main exposing (..)
x : { a : Int, 5 }
x = 1
